--- a/index.html
+++ b/index.html
@@ -34,8 +34,55 @@
                     <h1>!*</h1>
                 </div>
                 <div class="saludo2">
-                    <h2> Soy Natalia Oviedo</h2>
-                    <h2> Soy* Diseñadora Gráfica</h2>
+                    <h3> Soy Natalia Oviedo</h3>
+                    <h3> Soy* Diseñadora Gráfica</h3>
                 </div>
             </div>
         </section>
+        <section id="sobre-mi">
+            <article>
+            <h2> ¡te invito a conocerme!</h2>
+            </article>
+            <div class="botones-secundarios">
+                <a href="#sobre-mi">sobre mi </a>
+                <a href="#mis-proyectos">mis proyectos</a>
+            </div>
+            <div class="saludo-final">
+                <a href="#botones" class="volver-arriba">
+                    <img class="volver-arriba" src="./img/iconos/button.png" alt="volver-arriba">
+                </a>
+                <div class="despedida">
+                <img class="brillo2-0" src="./img/iconos/brillo2.png" alt="animacion brillo" width="60px" height="60px">
+                <h1>¡contactame!</h1>
+                <img class="brillo-2" src="./img/iconos/brillo2.png" alt="animacion brillo" width="60px" height="60px">
+            </div>
+            </div>
+        </section>
+        </main>
+        <footer id="contacto">
+            <div class="redes">
+                <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
+                    <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
+                </a>
+                <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
+                    <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
+                </a>
+            </div><div class="mensaje">
+                <div class="mje">
+                    <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
+                        <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                    </a>
+                    <h4>Linkedin</h4>
+                </div>
+                <div class="mje">
+                    <a
+                        href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
+                        <img src="./img/logos/gmail.png" width="50px" height="50px">
+                    </a>
+                    <h4>natiioviedo92@gmail.com</h4>
+                </div>
+            </div>
+            <h6 class="copy"> Copyright © 2024 Natalia Oviedo</h6>
+        </footer>
+    </body>
+    </html>
