--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>/ Natalia oviedo </title>
-        <link href="style.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
-    </head>
-    
+
+<head>
+    <meta charset="utf-8" />
+    <title>/ Natalia oviedo </title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
+</head>
+
 <body>
     <header>
         <nav id="botonera">
@@ -20,3 +21,19 @@
             </div>
         </nav>
     </header>
+</body>
+<main>
+
+
+
+
+
+
+
+
+
+
+    
+</main>
+
+</html>
