--- a/formulario.html
+++ b/formulario.html
@@ -12,12 +12,14 @@
     <header>
         <nav id="botonera">
             <div class="logo">
+                <a href="index.html"> 
                 <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
+                </a>
             </div>
             <div class="botones">
-                <a href="#sobre-mi">Sobre mi</a>
-                <a href="#mis-proyectos">Mis proyectos</a>
-                <a href="#contacto">Contacto</a>
+                <a href="sobremi.html">Sobre mi</a>
+                <a href="misproyectos.html">Mis proyectos</a>
+                <a href="formulario.html">Contacto</a>
             </div>
         </nav>
     </header>
