--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
             </div>
             <div class="botones">
-                <a href="#sobre-mi">Sobre mi</a>
-                <a href="#mis-proyectos">Mis proyectos</a>
-                <a href="#contacto">Contacto</a>
+                <a href="sobremi.html">Sobre mi</a>
+                <a href="misproyectos.html">Mis proyectos</a>
+                <a href="formulario.html">Contacto</a>
             </div>
         </nav>
     </header>
@@ -34,8 +34,8 @@
                     <h1>!*</h1>
                 </div>
                 <div class="saludo2">
-                    <h3> Soy Natalia Oviedo</h3>
-                    <h3> Soy* Diseñadora Gráfica</h3>
+                    <h2> Soy Natalia Oviedo</h2>
+                    <h2> Soy* Diseñadora Gráfica</h2>
                 </div>
             </div>
         </section>
@@ -44,11 +44,11 @@
             <h2> ¡te invito a conocerme!</h2>
             </article>
             <div class="botones-secundarios">
-                <a href="#sobre-mi">sobre mi </a>
-                <a href="#mis-proyectos">mis proyectos</a>
+                <a href="sobremi.html">sobre mi </a>
+                <a href="misproyectos.html">mis proyectos</a>
             </div>
             <div class="saludo-final">
-                <a href="#botones" class="volver-arriba">
+                <a href="#botonera" class="volver-arriba">
                     <img class="volver-arriba" src="./img/iconos/button.png" alt="volver-arriba">
                 </a>
                 <div class="despedida">
