--- a/misproyectos.html
+++ b/misproyectos.html
@@ -12,16 +12,19 @@
     <header>
         <nav id="botonera">
             <div class="logo">
-                <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
+                <a href="index.html">
+                    <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
+                </a>
             </div>
             <div class="botones">
-                <a href="#sobre-mi">Sobre mi</a>
-                <a href="#mis-proyectos">Mis proyectos</a>
-                <a href="#contacto">Contacto</a>
+                <a href="sobremi.html">Sobre mi</a>
+                <a href="misproyectos.html">Mis proyectos</a>
+                <a href="formulario.html">Contacto</a>
             </div>
         </nav>
     </header>
-</body>
+
+
 <main>
 
 
@@ -33,7 +36,8 @@
 
 
 
-    
+
 </main>
+</body>
 
 </html>
