--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section class="inicio">
             <div class="baner.img">
-                <img class="baner" src="./img/cv-02.jpg" alt="Chica sentada" width="1920px" height="550px">
+                <img class="baner" src="./img/index/cv-02.jpg" alt="Chica sentada" width="1920px" height="550px">
                 <img class="brillo" src="./img/iconos/brillo.svg" alt="animacion brillo" width="60px" height="60px">
                 <img class="brillo2" src="./img/iconos/brillo.svg" alt="animacion brillo" width="60px" height="60px">
             </div>
