--- a/misproyectos.html
+++ b/misproyectos.html
@@ -23,21 +23,37 @@
             </div>
         </nav>
     </header>
-
-
-<main>
-
-
-
-
-
-
-
-
-
-
-
-</main>
+    <main>
+    <h2>Mis proyectos</h2>
+    <p>Estos son algunos de mis proyectos</p>
+    <div class="carousel-container">
+        <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+        <div class="carousel">
+            <div class="carousel--track" id="caroousel-track">
+    <a href="">
+        <img src="./img/proyectos/iconos/izq.svg" alt="Afiche social" width="50px"
+            height="50px"> 
+            <div class="carrousel--track" id="track">   
+    <a href="irisvanherpen.html">
+        <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg" alt="Afiche social" width="200px"
+            height="280px">
+        </a>
+    <a><img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg" alt="Afiche social" width="200px"
+            height="280px"></a>
+    <a><img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg" alt="trabajo editorial de jacqueline casey" width="200px"
+            height="280px"></a>
+    <a><img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="infografia" width="200px"
+            height="280px"></a>
+    <a><img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg" alt="Afiche social" width="200px"
+            height="280px"></a>
+    <a><img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Afiche social" width="200px"
+            height="280px">
+    </a>
+    <a href="">
+        <img src="./img/proyectos/iconos/der.svg" alt="Afiche social" width="50px"
+            height="50px">
+        </div>
+    </main>
 </body>
 
 </html>
