--- a/sobremi.html
+++ b/sobremi.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>/ Natalia oviedo </title>
+    <title>/ Natalia oviedo/ sobre mi </title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
 </head>
@@ -42,26 +42,52 @@
                     </p>
                 </article>
             </div>
+            <section class="intereses">
+                <h2>*/ intereses</h2>
+                <ul>
+                    <li>crear</li>
+                    <li>aprender</li>
+                    <li>viajar</li>
+                </ul>
+                <img src="./img/giff/ilustracion.gif" alt="animacion de lineas">
+            </section>
+            <section class="informacion-personal">
+                <div><!---ver si este div es necesario--->
+                    <div class="educacion">
+                        <h3>Educación</h3>
+                        <ul class="info-lista">
+                            <li class="negrita">Universidad Nacional de Lanús (UNLa)</li>
+                            <li>Licenciatura en Diseño y Comunicación Visual (2020 - actualidad)</li>
+                            <li class="negrita">Coder House</li>
+                            <li>Curso de Diseño UX/UI (cursando actualmente)</li>
+                        </ul>
+                    </div>
+                    <div class="idiomas">
+                        <h3>Idiomas</h3>
+                        <ul class="info-lista">
+                            <li class="negrita">Español </li>
+                            <li>Nativo</li>
+                            <li class="negrita">Ingles </li>
+                            <li> Nivel básico</li>
+                            <li class="negrita">Portugués </li>
+                            <li> Nivel medio</li>
+                        </ul>
+                    </div>
+                    <div class="habilidades">
+                    <h3>Habilidades</h3>
+                    <div>
+                    <ul class="info-lista">
+                        <li><img src="./img/logos/ilustrador.png" alt=" Logo Ilustrator" width="60px" height="60px">
+                        </li>
+                        <li><img src="./img/logos/photoshop.png" alt=" Logo Photoshop" width="60px" height="60px"></li>
+                        <li><img src="./img/logos/indesign.png" alt=" Logo Indesigne" width="60px" height="60px"></li>
+                        <li><img src="./img/logos/figma.png" alt="Logo Figma" width="60px" height="60px"></li>
+                    </ul>
+                    </div>
+                </div>
+            </section>
 
-        </section>
-
-
-
-
-
-
-
-
-
-
-
-    </main>
-
-    <body>
-
-
-
-
+        </main>
 
         <footer></footer>
     </body>
