avances index y proyectos

--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
                 <a href="misproyectos.html">mis proyectos</a>
             </div>
             <div class="saludo-final">
-                <a href="#botonera" class="volver-arriba">
-                    <img class="volver-arriba" src="./img/iconos/button.png" alt="volver-arriba">
+                <a href="#botonera" class="volver-arriba"><img class="volver-arriba" src="./img/iconos/button.png" alt="volver-arriba">
                 </a>
                 <div class="despedida">
+                    <h1>¡contactame!</h1>
+                </div>
+                <div class="brillos-despedida">
                 <img class="brillo2-0" src="./img/iconos/brillo2.png" alt="animacion brillo" width="60px" height="60px">
-                <h1>¡contactame!</h1>
                 <img class="brillo-2" src="./img/iconos/brillo2.png" alt="animacion brillo" width="60px" height="60px">
             </div>
-            </div>
+        </div>
         </section>
         </main>
         <footer id="contacto">
@@ -81,8 +82,10 @@
                     </a>
                     <h4>natiioviedo92@gmail.com</h4>
                 </div>
-            </div>
-            <h6 class="copy"> Copyright © 2024 Natalia Oviedo</h6>
+                </div>
+                <div class="copy">
+            <h6 > Copyright © 2024 Natalia Oviedo</h6>
+        </div>
         </footer>
     </body>
     </html>
