--- a/misproyectos.html
+++ b/misproyectos.html
@@ -23,37 +23,101 @@
             </div>
         </nav>
     </header>
-    <main>
-    <h2>Mis proyectos</h2>
-    <p>Estos son algunos de mis proyectos</p>
-    <div class="carousel-container">
-        <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-        <div class="carousel">
-            <div class="carousel--track" id="caroousel-track">
-    <a href="">
-        <img src="./img/proyectos/iconos/izq.svg" alt="Afiche social" width="50px"
-            height="50px"> 
-            <div class="carrousel--track" id="track">   
-    <a href="irisvanherpen.html">
-        <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg" alt="Afiche social" width="200px"
-            height="280px">
-        </a>
-    <a><img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg" alt="Afiche social" width="200px"
-            height="280px"></a>
-    <a><img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg" alt="trabajo editorial de jacqueline casey" width="200px"
-            height="280px"></a>
-    <a><img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="infografia" width="200px"
-            height="280px"></a>
-    <a><img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg" alt="Afiche social" width="200px"
-            height="280px"></a>
-    <a><img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Afiche social" width="200px"
-            height="280px">
-    </a>
-    <a href="">
-        <img src="./img/proyectos/iconos/der.svg" alt="Afiche social" width="50px"
-            height="50px">
-        </div>
+    <main class="galeria">
+        <section>
+            <div class="inicio-carousel">
+                <h2>*/ Mis proyectos</h2>
+                <p>Te invito a ver algunmos de mis trabajos realizados</p>
+            </div>
+            <div class="carousel-container">
+                <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+                <div class="carousel">
+                    <div class="carousel-track" id="carousel-track">
+                        <!-- Proyecto 1 -->
+                        <div class="carousel-item">
+                            <a href="https://enlace-al-proyecto1.com" target="_blank">
+                                <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg" alt="Afiche Iris van Herpen">
+                            </a>
+                            <p>Afiche</p>
+                            <a class="ver-mas" href="https://enlace-detalle-proyecto1.com" target="_blank">Ver más</a>
+                        </div>
+                        <!-- Proyecto 2 -->
+                        <div class="carousel-item">
+                            <a href="https://enlace-al-proyecto2.com" target="_blank">
+                                <img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Afiche Oceanos Libres">
+                            </a>
+                            <p>Identidad</p>
+                            <a class="ver-mas" href="https://enlace-detalle-proyecto2.com" target="_blank">Ver más</a>
+                        </div>
+                        <!-- Proyecto 3 -->
+                        <div class="carousel-item">
+                            <a href="https://enlace-al-proyecto3.com" target="_blank">
+                                <img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg" alt="Proyecto Editorial">
+                            </a>
+                            <p>Editorial</p>
+                            <a class="ver-mas" href="https://enlace-detalle-proyecto3.com" target="_blank">Ver más</a>
+                        </div>
+                        <!-- Proyecto 4 -->
+                        <div class="carousel-item">
+                            <a href="https://enlace-al-proyecto4.com" target="_blank">
+                                <img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="Infografía">
+                            </a>
+                            <p>Infografía</p>
+                            <a class="ver-mas" href="https://enlace-detalle-proyecto4.com" target="_blank">Ver más</a>
+                        </div>
+                        <!-- Proyecto 5 -->
+                        <div class="carousel-item">
+                            <a href="https://enlace-al-proyecto4.com" target="_blank">
+                                <img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg" alt="Proyecto 4">
+                            </a>
+                            <p>Afiche</p>
+                            <a class="ver-mas" href="https://enlace-detalle-proyecto4.com" target="_blank">Ver más</a>
+                        </div>
+                        <!-- Proyecto 6 -->
+                        <div class="carousel-item">
+                            <a href="https://enlace-al-proyecto4.com" target="_blank">
+                                <img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg" alt="Proyecto 4">
+                            </a>
+                            <p>Identidad</p>
+                            <a class="ver-mas" href="https://enlace-detalle-proyecto4.com" target="_blank">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+                <button class="next" onclick="moveSlide(1)">&#10095;</button>
+            </div>
     </main>
+    <footer id="contacto">
+        <div class="redes">
+            <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
+                <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
+            </a>
+            <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
+                <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
+            </a>
+        </div>
+        <div class="mensaje">
+            <div class="mje">
+                <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
+                    <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                </a>
+                <h4>Linkedin</h4>
+            </div>
+            <div class="mje">
+                <a
+                    href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
+                    <img src="./img/logos/gmail.png" width="50px" height="50px">
+                </a>
+                <h4>natiioviedo92@gmail.com</h4>
+            </div>
+        </div>
+        <div class="copy">
+            <h6> Copyright © 2024 Natalia Oviedo</h6>
+        </div>
+    </footer>
+    
+<script src="script.js"></script>
 </body>
 
 </html>
+
+
