--- a/formulario.html
+++ b/formulario.html
@@ -32,7 +32,7 @@
         <section>
             <div class="aviso">
                 <h1>contactame</h1>
-                <img src="./ilus.png" alt="ilustracion de avion" width="375px" height="161px">
+                <img src="./img/ilustraciones/ilustracion-avion.png" alt="ilustracion de avion" width="360px" height="161px">
             </div>
             <p> *Los campos con asteriscos son obligatorios! </p>
             <form method="post"
@@ -56,7 +56,14 @@
         </section>
     </main>
     <footer id="contacto">
-        <div class="mensaje">
+        <div class="redes">
+            <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
+                <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
+            </a>
+            <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
+                <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
+            </a>
+        </div><div class="mensaje">
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
                     <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
@@ -70,8 +77,10 @@
                 </a>
                 <h4>natiioviedo92@gmail.com</h4>
             </div>
-        </div>
-        <h6 class="copy"> Copyright © 2024 Natalia Oviedo</h6>
+            </div>
+            <div class="copy">
+        <h6 > Copyright © 2024 Natalia Oviedo</h6>
+    </div>
     </footer>
 </body>
 
