--- a/misproyectos.html
+++ b/misproyectos.html
@@ -38,7 +38,7 @@
                             <a href="https://enlace-al-proyecto1.com" target="_blank">
                                 <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg" alt="Afiche Iris van Herpen">
                             </a>
-                            <p>Afiche</p>
+                            <h4>Afiche</h4>
                             <a class="ver-mas" href="https://enlace-detalle-proyecto1.com" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 2 -->
@@ -46,7 +46,7 @@
                             <a href="https://enlace-al-proyecto2.com" target="_blank">
                                 <img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Afiche Oceanos Libres">
                             </a>
-                            <p>Identidad</p>
+                            <h4>Identidad</h4>
                             <a class="ver-mas" href="https://enlace-detalle-proyecto2.com" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 3 -->
@@ -54,7 +54,7 @@
                             <a href="https://enlace-al-proyecto3.com" target="_blank">
                                 <img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg" alt="Proyecto Editorial">
                             </a>
-                            <p>Editorial</p>
+                            <h4>Editorial</h4>
                             <a class="ver-mas" href="https://enlace-detalle-proyecto3.com" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 4 -->
@@ -62,7 +62,7 @@
                             <a href="https://enlace-al-proyecto4.com" target="_blank">
                                 <img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="Infografía">
                             </a>
-                            <p>Infografía</p>
+                            <h4>Infografía</h4>
                             <a class="ver-mas" href="https://enlace-detalle-proyecto4.com" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 5 -->
@@ -70,7 +70,7 @@
                             <a href="https://enlace-al-proyecto4.com" target="_blank">
                                 <img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg" alt="Proyecto 4">
                             </a>
-                            <p>Afiche</p>
+                            <h4>Afiche</h4>
                             <a class="ver-mas" href="https://enlace-detalle-proyecto4.com" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 6 -->
@@ -78,7 +78,7 @@
                             <a href="https://enlace-al-proyecto4.com" target="_blank">
                                 <img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg" alt="Proyecto 4">
                             </a>
-                            <p>Identidad</p>
+                            <h4>Identidad</h4>
                             <a class="ver-mas" href="https://enlace-detalle-proyecto4.com" target="_blank">Ver más</a>
                         </div>
                     </div>
