--- a/irisvanherpen.html
+++ b/irisvanherpen.html
@@ -9,26 +9,33 @@
 </head>
 
 <body>
-
-    <main clas="detalle-galeria">
-        <a href="misproyectos.html">
-            <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px" height="60px">
-        </a>
-        <div class="detalle-titulo">
-            <h2>Afiche cultural</h2>
-            <h3>Iris Van Herpen</h3>
-            <p>Trabajo realizado para la materia taller de diseño II, el objetivo
-                del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van herpen una
-                diseñadora de moda Holandesa</p>
-                <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II"
-                target="_blank">visitar</a>
-                <div class="detalle-img">
-                    <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg">
-                    </div>
-        </div>
+    <main>
+        <section class="detalle-galeria">
+            <div class="detalle-titulo">
+                <a href="misproyectos.html">
+                    <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
+                        height="60px">
+                </a>
+                <article >
+                    <h2>Afiche cultural</h2>
+                    <h3>Iris Van Herpen</h3>
+                    <p>Trabajo realizado para la materia taller de diseño II, el objetivo
+                        del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van
+                        herpen
+                        una
+                        diseñadora de moda Holandesa</p>
+                </article>
+                <div class="boton-visitar">
+                    <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II"
+                        target="_blank">visitar</a>
+                </div>
+            </div>
+            <div class="contenedor">
+                <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="806"
+                    height="1045px">
+            </div>
+        </section>
     </main>
-
-
 </body>
 
 </html>
