--- a/sobremi.html
+++ b/sobremi.html
@@ -27,10 +27,11 @@
         <section id="mipresentacion">
             <div class="nombre">
                 <h2>*/Natalia Oviedo</h2>
-                <img src="./img/1x/ilustracion350px.png" alt="ilustracion de avión" width="350px" height="150px">
+                <img src="./img/ilustraciones/ilustracion-avion.png" alt="ilustracion de avión" width="350px"
+                    height="150px">
             </div>
             <div class="mipresentacion">
-                <img src="./img/index/fotos/torresdelp.jpg" alt="foto en torres del paine, Chile" width="450px"
+                <img src="./img/sobremi/fotos/torresdelp.jpg" alt="foto en torres del paine, Chile" width="450px"
                     height="580px">
                 <article class="presentacion">
                     <h4>Diseñadora gráfica Jr.</h4>
@@ -42,54 +43,83 @@
                     </p>
                 </article>
             </div>
-            <section class="intereses">
-                <h2>*/ intereses</h2>
-                <ul>
-                    <li>crear</li>
-                    <li>aprender</li>
-                    <li>viajar</li>
+        </section>
+        <section class="intereses">
+            <h2>*/ intereses</h2>
+            <ul>
+                <li>crear</li>
+                <li>aprender</li>
+                <li>viajar</li>
+            </ul>
+            <img src="./img/giff/ilustracion.gif" alt="animacion de lineas" width="1910px" height="430px">
+        </section>
+        <section class="informacion-personal"><!---ver si este div es necesario--->
+            <div class="grid-item a">
+                <a href="#botonera" class="volver-arriba"><img src="./img/iconos/button.png" alt="volver-arriba"
+                        width="60px" height="60px"></a>
+            </div>
+            <div class="grid-item b">
+                <h3>Educación</h3>
+                <ul class="info-lista">
+                    <li class="negrita">Universidad Nacional de Lanús (UNLa)</li>
+                    <li>Licenciatura en Diseño y Comunicación Visual (2020 - actualidad)</li>
+                    <li class="negrita">Coder House</li>
+                    <li>Curso de Diseño UX/UI (cursando actualmente)</li>
                 </ul>
-                <img src="./img/giff/ilustracion.gif" alt="animacion de lineas">
-            </section>
-            <section class="informacion-personal">
-                <div><!---ver si este div es necesario--->
-                    <div class="educacion">
-                        <h3>Educación</h3>
-                        <ul class="info-lista">
-                            <li class="negrita">Universidad Nacional de Lanús (UNLa)</li>
-                            <li>Licenciatura en Diseño y Comunicación Visual (2020 - actualidad)</li>
-                            <li class="negrita">Coder House</li>
-                            <li>Curso de Diseño UX/UI (cursando actualmente)</li>
-                        </ul>
-                    </div>
-                    <div class="idiomas">
-                        <h3>Idiomas</h3>
-                        <ul class="info-lista">
-                            <li class="negrita">Español </li>
-                            <li>Nativo</li>
-                            <li class="negrita">Ingles </li>
-                            <li> Nivel básico</li>
-                            <li class="negrita">Portugués </li>
-                            <li> Nivel medio</li>
-                        </ul>
-                    </div>
-                    <div class="habilidades">
-                    <h3>Habilidades</h3>
-                    <div>
-                    <ul class="info-lista">
-                        <li><img src="./img/logos/ilustrador.png" alt=" Logo Ilustrator" width="60px" height="60px">
-                        </li>
-                        <li><img src="./img/logos/photoshop.png" alt=" Logo Photoshop" width="60px" height="60px"></li>
-                        <li><img src="./img/logos/indesign.png" alt=" Logo Indesigne" width="60px" height="60px"></li>
-                        <li><img src="./img/logos/figma.png" alt="Logo Figma" width="60px" height="60px"></li>
-                    </ul>
-                    </div>
-                </div>
-            </section>
-
-        </main>
-
-        <footer></footer>
-    </body>
+            </div>
+            <div class="grid-item c">
+                <h3>Idiomas</h3>
+                <ul class="info-lista">
+                    <li class="negrita">Español </li>
+                    <li>Nativo</li>
+                    <li class="negrita">Ingles </li>
+                    <li> Nivel básico</li>
+                    <li class="negrita">Portugués </li>
+                    <li> Nivel medio</li>
+                </ul>
+            </div>
+            <div class="grid-item d">
+                <h3>Habilidades</h3>
+                <ul class="info-lista2">
+                    <li><img src="./img/logos/ilustrador.png" alt=" Logo Ilustrator" width="60px" height="60px">
+                    </li>
+                    <li><img src="./img/logos/photoshop.png" alt=" Logo Photoshop" width="60px" height="60px">
+                    </li>
+                    <li><img src="./img/logos/indesign.png" alt=" Logo Indesigne" width="60px" height="60px">
+                    </li>
+                    <li><img src="./img/logos/figma.png" alt="Logo Figma" width="60px" height="60px"></li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer id="contacto">
+        <div class="redes">
+            <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
+                <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
+            </a>
+            <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
+                <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
+            </a>
+        </div>
+        <div class="mensaje">
+            <div class="mje">
+                <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
+                    <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                </a>
+                <h4>Linkedin</h4>
+            </div>
+            <div class="mje">
+                <a
+                    href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
+                    <img src="./img/logos/gmail.png" width="50px" height="50px">
+                </a>
+                <h4>natiioviedo92@gmail.com</h4>
+            </div>
+        </div>
+        <div class="copy">
+            <h6> Copyright © 2024 Natalia Oviedo</h6>
+        </div>
+    </footer>
+</body>
 
 </html>
